Fix collapsing in modmail.
Fixes a bug introduced in dd9e045 that prevents messages from collapsing
in modmail.  This was due to the markup change, combined with some overly
specific CSS.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -2132,7 +2132,7 @@ textarea.gray { color: gray; }
 
 .message.collapsed {
     > .entry {
-        > .buttons, > .md {
+        .buttons, .md {
             display: none;
         }   
     }
